2008-04-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-key-shortcuts-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	Write modified shortcuts to config file

	* src/eggcellrendererkeys.cc:
	* src/eggcellrendererkeys.h:
	* src/gnome-cmd-key-shortcuts-dialog.cc:
	Properly handle CAPSLOCK and Super keys in shortcuts dialog

	* src/gnome-cmd-user-actions.cc:
	Replaced previous default binding (CTRL+~) for view.home with SHIFT+CTRL+~
	(<shift><control>asciitilde), as for the previous one didn't work at all.

2008-04-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	Added support for GDK_grave key

	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-user-actions.cc:
	Define CTRL+Q binding as user definable (file.exit)

2008-04-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/eggcellrendererkeys.cc:
	* src/eggcellrendererkeys.h:
	* src/gnome-cmd-user-actions.cc:
	Do not use gtk_accelerator_get_label() for representing accelerators

2008-04-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Added new key binding: SUPER+F for file search

2008-04-07  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/eggcellrendererkeys.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Support for <super>, <hyper> and <meta> modifiers (since GTK+ 2.10)

2008-04-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/eggaccelerators.cc:
	* src/eggcellrendererkeys.cc:
	* src/gnome-cmd-key-shortcuts-dialog.cc:
	Use libegg cell renderer and accelerators

2008-03-31  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added gnome_cmd_user_actions_create_model() function

	* src/eggaccelerators.cc:
	* src/eggaccelerators.h:
	* src/eggcellrendererkeys.cc:
	* src/eggcellrendererkeys.h:
	Added libegg cell renderer and accelerators

2008-03-31  Thomas Kordelle

	* libgcmd/gnome-cmd-dialog.c:
	Fix for memory leak

	* src/gnome-cmd-con.cc: